# gfx-swap

./: .gitignore  Anchor.toml  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml
programs/gfx-swap/: Cargo.toml  build.rs
programs/gfx-swap/examples/: create_pool.rs  deposit1.rs  deposit2.rs  mint_lp.rs  pool_status.rs  swap.rs  withdraw1.rs  withdraw2.rs
programs/gfx-swap/src/: constraints.rs  errors.rs  lib.rs  utils.rs
programs/gfx-swap/src/contexts/: config_pool.rs  create_pool.rs  deposit1.rs  deposit2.rs  mint_lp.rs  mod.rs  swap.rs  withdraw1.rs  withdraw2.rs  withdraw_fee.rs
programs/gfx-swap/src/curve/: fees.rs  mod.rs  swap_curve.rs
programs/gfx-swap/src/curve/calculators/: constant_product.rs  mod.rs  stable.rs  types.rs
programs/gfx-swap/src/states/: lp_mint.rs  mod.rs  pool.rs
programs/gfx-swap/tests/: create_swap_pool.rs  swap.rs
programs/gfx-swap/tests/utils/: mod.rs
sim/: Cargo.toml  README.md
sim/src/: lib.rs
